# Physically-based-Rendering

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  clean.sh  compile_shaders.sh  config.json  config.json_generated  index.html  main.cpp  screen.css  valgrind.sh  valgrind.supp
classes/: config.h
classes/qt/: GLWidget.cpp  GLWidget.h  Window.cpp  Window.h
cmake_modules/: FindASSIMP.cmake  FindDEVIL.cmake  FindGLM.cmake  FindOpenCL.cmake
resources/models/: skybox1.mtl  skybox1.spec  spec-lib.json
resources/models/blender/: box-compare.blend  boxes-open.blend  cornell-boxes-ceiling-light.blend  cornell-boxes-ceiling-light2.blend  cornell-boxes-red-blue-box-yellow.blend  cornell-boxes-red-blue-green.blend  cornell-boxes-red-blue.blend  cornell-boxes.blend  cornell-closed-boxes.blend  cornell-closed-empty.blend  cornell-empty-blue-yellow.blend  cornell-empty.blend  cornell-icosphere-glass.blend  cornell-single-box.blend  cornell-sphere.blend  cornell-squirrel-cylinder.blend  cornell-squirrel-red.blend  cornell-squirrel.blend  cornell-suzanne.blend  eval-caustic.blend  eval-sphere-anisotropy.blend  eval-sphere.blend  eval-sphere_anisotropy.blend  eval-squirrel-caustic.blend  eval-squirrels.blend  freefloating-squirrels.blend  icosphere.blend  pillars.blend  room-of-boxes.blend  room-of-boxes.blend1  room-of-boxes.blend2  scratches.blend  skybox1.blend  sphere-compare.blend  squirrel-lowpoly-boxed.blend  squirrel-lowpoly.blend  squirrel-mirror.blend  squirrel-podest.blend  squirrels.blend
resources/models/cornell/: box-compare.mtl  box-compare.spec  boxes-ceiling-light.mtl  boxes-ceiling-light.spec  boxes-ceiling-light2.mtl  boxes-ceiling-light2.spec  boxes-open.mtl  boxes-open.spec  boxes-red-blue.mtl  boxes-red-blue.spec  boxes-rgb.mtl  boxes.mtl  cornell-boxes-red-blue-box-yellow.mtl  empty-blue-yellow.mtl  empty-blue-yellow.spec  icosphere-glass.mtl  icosphere-glass.spec  room-of-boxes.mtl  room-of-boxes.spec  scratches.mtl  scratches.spec  single-box-white.mtl  single-box-white.spec  single-box.mtl  single-box.spec  sphere.mtl  sphere.spec  squirrel-cylinder.mtl  squirrel-cylinder.spec  squirrel-red.mtl  squirrel.mtl  squirrel.spec  squirrel_smooth.mtl  squirrel_smooth.spec  suzanne.mtl  suzanne.spec
resources/models/testing/: README  applejack.mtl  applejack.spec  applejack2.mtl  applejack2.spec  applejack3.mtl  applejack3.spec  box-compare.mtl  boxes-ceiling-light.mtl  boxes-ceiling-light.spec  boxes-ceiling-light2.spec  boxes-open.mtl  boxes-open.spec  eval-caustic.mtl  eval-caustic.spec  eval-sphere-anisotropy-2.mtl  eval-sphere-anisotropy-2.spec  eval-sphere-anisotropy.mtl  eval-sphere-anisotropy.spec  eval-sphere.mtl  eval-sphere.spec  eval-squirrel-caustic.mtl  eval-squirrel-caustic.spec  eval-squirrels.mtl  eval-squirrels.spec  icosphere-glass.mtl  icosphere-glass.spec  icosphere.mtl  icosphere.spec  little-squirrels.mtl  little-squirrels.spec  pillars.mtl  pillars.spec  room-of-boxes.spec  scratches.spec  single-box.spec  sphere-compare.mtl  sphere-compare.spec  sphere.mtl  sphere.spec  (+20 more)
source/: AccelStructure.h  ActionHandler.cpp  ActionHandler.h  BVH.cpp  BVH.h  BVHKdTree.cpp  BVHKdTree.h  CL.cpp  CL.h  Camera.cpp  Camera.h  Cfg.cpp  Cfg.h  ImGuiHandler.cpp  ImGuiHandler.h  KdNode.cpp  KdNode.h  KdTree.cpp  KdTree.h  LightParser.cpp  LightParser.h  Logger.cpp  Logger.h  MathHelp.cpp  MathHelp.h  ModelLoader (COPY).cpp  ModelLoader.cpp  ModelLoader.h  MtlParser.cpp  MtlParser.h  ObjParser.cpp  ObjParser.h  PathTracer.cpp  PathTracer.h  SpecParser.cpp  SpecParser.h  SphereTree.cpp  SphereTree.h  Vertex.h  VulkanHandler.cpp  (+6 more)
source/accelstructures/: AccelStructure.cpp  AccelStructure.h  BVH.cpp  BVH.h  BVHKdTree.cpp  BVHKdTree.h  KdTree.cpp  KdTree.h
source/opencl/: noise_filtering.cl  pathtracing.cl  pathtracing_sample.cl  pathtracing_singlepath.cl  pt_brdf.cl  pt_bvh.cl  pt_header.cl  pt_intersect.cl  pt_kdtree.cl  pt_phongtess.cl  pt_rgb.cl  pt_specrend.cl  pt_spectral.cl  pt_spectral_precalc.cl  pt_traversal.cl  pt_utils.cl
source/qt/: GLWidget (COPY).cpp  GLWidget.cpp  GLWidget.h  InfoWindow.cpp  InfoWindow.h  Window.cpp  Window.h
source/shader/: debug.frag  lines.frag  lines.vert  pathtracing.frag  pathtracing.vert  phong.frag  phong.vert  phong_fragment.glsl  phong_vertex.glsl  simple.frag  simple.vert  test.glsl
source/shader/unused/: normals.frag  normals.vert  phong.frag  phong.vert
source/shaders/: frag.spv  fragment.frag  vert.spv  vertex.vert
source/tests/: kdTree_test.cpp
source/tinyobjloader/: tiny_obj_loader.cpp
src/: ActionHandler.cpp  ActionHandler.h  Cfg.cpp  Cfg.h  ImGuiHandler.cpp  ImGuiHandler.h  LightParser.h  Logger.cpp  ModelLoader.h  ModelRenderer.cpp  ModelRenderer.h  PathTracer.cpp  PathTracer.h  Vertex.h  VulkanHandler.cpp  VulkanHandler.h  VulkanSetup.h  main.cpp
src/accelstructures/: AccelStructure.cpp
src/parsers/: LightParser.h  MtlParser.h  ObjParser.cpp  ObjParser.h
src/shaders/: compute.comp.glsl  compute.spv  frag.spv  fragment.frag  vert.spv  vertex.vert
src/tools/: colormatrix.py
src/vulkan/: BuilderVk.h  ComputeHandler.cpp  ComputeHandler.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanSetup.cpp  VulkanSetup.h
tests/: CMakeLists.txt
valgrind/: valgrind.sh
